[project]
name = "dev-env-mcp"
version = "0.1.0"
description = "A safe venv controller for coding agents: create/select a project venv and run restricted pip operations through that venv’s Python, with persistence + audit."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.25.0",
    "psutil>=7.2.1",
]
